--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "axios": "^0.21.0",
+    "dotenv": "^8.2.0",
     "expo": "~40.0.0",
+    "expo-constants": "^9.3.5",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
